--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<table border>
+	<thead>
+		<tr>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td>22</td>
+			<td>Datta</td>
+		</tr>
+		<tr>
+			<td>21</td>
+			<td>Chandu</td>
+		</tr>
+	</tbody>
+		</table>
 </body>
 
 </html>
